--- a/api/pom.xml
+++ b/api/pom.xml
@@ -17,7 +17,26 @@
       <version>1.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.20</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.piaoniu</groupId>
+      <artifactId>piaoniu-daogen</artifactId>
+      <version>0.2.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.4.5</version>
+    </dependency>
+
+
   </dependencies>
+
 
   <build>
     <plugins>
@@ -28,6 +47,9 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+          <annotationProcessors>
+            com.slj.core.processor.TestProcessor
+          </annotationProcessors>
         </configuration>
       </plugin>
     </plugins>
