--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,15 @@
   <groupId>com.slj</groupId>
   <artifactId>springboot</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <repositories>
+    <repository>
+      <id>central</id>
+      <name>My Central Repository</name>
+      <url>http://repo.maven.apache.org/maven2</url>
+      <layout>default</layout>
+    </repository>
+  </repositories>
+
   <modules>
     <module>core</module>
     <module>api</module>
