--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,11 +8,18 @@
   <groupId>com.slj</groupId>
   <artifactId>api</artifactId>
   <version>SNAPSHOT-1.0</version>
+  <packaging>jar</packaging>
+  <parent>
+      <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>1.5.2.RELEASE</version>
+  </parent>
+
 
 
   <dependencies>
     <dependency>
-      <groupId>com.slj</groupId>
+      <groupId>com.github.songlijiang</groupId>
       <artifactId>core</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>provided</scope>
@@ -29,11 +36,14 @@
       <version>0.2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>org.mybatis</groupId>
-      <artifactId>mybatis</artifactId>
-      <version>3.4.5</version>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+      <version>1.5.9.RELEASE</version>
+    </dependency>
 
   </dependencies>
 
@@ -51,6 +61,10 @@
             com.slj.core.processor.TestProcessor
           </annotationProcessors>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
