--- a/api/pom.xml
+++ b/api/pom.xml
@@ -5,12 +5,12 @@
 
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.slj</groupId>
+  <groupId>com.github.songlijiang</groupId>
   <artifactId>api</artifactId>
   <version>SNAPSHOT-1.0</version>
   <packaging>jar</packaging>
   <parent>
-      <groupId>org.springframework.boot</groupId>
+    <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>1.5.2.RELEASE</version>
   </parent>
@@ -38,6 +38,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-autoconfigure</artifactId>
+      <version>1.5.9.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
